[Infrastructure] Split Dependencies, Remove Unused Packages

--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "test": "./node_modules/mocha/bin/mocha test/*.js"
   },
   "dependencies": {
-    "chai": "^4.0.2",
     "guid": "0.0.12",
-    "mocha": "^3.4.2",
-    "socket.io": "^2.0.2",
     "underscore": "^1.8.3"
+  },
+  "devDependencies": {
+    "chai": "^4.0.2",
+    "mocha": "^3.4.2"
   }
 }
